Don't know how to get Android to build reliably, but it builds sometimes.
This set of small changes seems to help sometimes. IDEA tends to store some cache problem that affects later builds; deleting the `.gradle` hidden folder and all build folders, then running `gradlew android:cleanBuildCache` before running an Android building task sometimes works. Android Gradle Plugin 3.6.3 had all sorts of issues, including stack overflows and heap exhaustion. The heap exhaustion should be addressed by the change to project.kt . The stack overflows still happen, but less frequently, with Android Gradle Plugin 3.6.2 .